[gd_scene load_steps=7 format=3 uid="uid://dbbq2vtjx0w0y"]

[ext_resource type="Script" uid="uid://8tvneba1o3wn" path="res://src/world/chunk.gd" id="1_bwt5w"]
[ext_resource type="Shader" uid="uid://b4vyqx2a5say4" path="res://terrain.gdshader" id="2_133la"]
[ext_resource type="Texture2D" uid="uid://oe2jckdihhsp" path="res://assets/dirt.png" id="3_h5loj"]
[ext_resource type="Texture2D" uid="uid://83w5qniwnc00" path="res://assets/grass.png" id="4_lyq7u"]
[ext_resource type="Texture2D" uid="uid://dcbbq2hyi7qx3" path="res://assets/stone.png" id="5_35h8j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_itscw"]
resource_local_to_scene = true
shader = ExtResource("2_133la")
shader_parameter/dirt_texture = ExtResource("3_h5loj")
shader_parameter/grass_texture = ExtResource("4_lyq7u")
shader_parameter/stone_texture = ExtResource("5_35h8j")
shader_parameter/texture_size = Vector2(32, 32)

[node name="Chunk" type="Node2D"]
script = ExtResource("1_bwt5w")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
input_pickable = false
monitorable = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="TerrainMesh" type="MeshInstance2D" parent="."]
material = SubResource("ShaderMaterial_itscw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
